--- a/style.css
+++ b/style.css
@@ -73,12 +73,12 @@ tr:hover {
 }
 
 /* List Styles */
-ul {
+.requirements {
   list-style-type: none;
   padding: 0;
 }
 
-ul li {
+.requirements li {
   background: #ffcc99; /* Light orange */
   margin: 5px 0;
   padding: 10px;
@@ -87,7 +87,7 @@ ul li {
 
 /* Link Styles */
 a {
-  color: #cc6600; /* Darker saffron */
+  color: #5234c7;
   text-decoration: none;
 }
 
@@ -119,4 +119,89 @@ section {
   background-color: white;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+  h1 {
+    font-size: 2rem;
+  }
+
+  h2 {
+    font-size: 1.5rem;
+  }
+
+  p {
+    font-size: 1rem;
+  }
+
+  table,
+  th,
+  td {
+    font-size: 0.9rem;
+  }
+}
+
+/* Image Gallery Styles */
+.image-gallery .gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.image-gallery .image-container {
+  flex: 1 1 calc(15% - 10px);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.image-gallery img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+@media (max-width: 768px) {
+  .image-gallery .image-container {
+    flex: 1 1 calc(50% - 10px);
+  }
+}
+
+/* Modal Styles */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1000; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgba(0, 0, 0, 0.9); /* Black background with opacity */
+}
+
+.modal-content {
+  margin: auto;
+  display: block;
+  max-width: 90%;
+  max-height: 90%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.close-modal {
+  position: absolute;
+  top: 20px;
+  right: 35px;
+  color: #fff;
+  font-size: 40px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.close-modal:hover {
+  color: #ccc;
 }
